package com.task.noteapp.utils

object TestTags {
    const val ADD_NOTE = "add_note"
    const val NOTE_TITLE = "note_title"
    const val NOTE_IMAGE_URL = "note_image_url"
    const val NOTE_DESCRIPTION = "note_description"
    const val SAVE_NOTE = "save_note"
}
